src/serve/tests/requests/select/objs/snapshots/basiliq__serve__tests__requests__select__objs__include__include_rel_o2m.snap
---
source: src/serve/tests/requests/select/objs/include.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": [
    {
      "type": "public__peoples",
      "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f",
      "attributes": {
        "age": 22,
        "first-name": "Francis",
        "gender": "M",
        "last-name": "Le Roy",
        "twitter": null
      },
      "relationships": {
        "public__people-article": {
          "data": [
            {
              "type": "public__people-article",
              "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f,fdf715dd-8772-498c-8196-6f4ccb64edef"
            },
            {
              "type": "public__people-article",
              "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f,2dbf5d1a-b029-4456-af6b-339c75b1089c"
            }
          ]
        }
      }
    },
    {
      "type": "public__peoples",
      "id": "777cc565-c66b-4942-ab44-8fc5f194b804",
      "attributes": {
        "age": 34,
        "first-name": "Somebody",
        "gender": "F",
        "last-name": "Wuhu",
        "twitter": "@randomhandle"
      },
      "relationships": {
        "public__people-article": {
          "data": [
            {
              "type": "public__people-article",
              "id": "777cc565-c66b-4942-ab44-8fc5f194b804,46c4fe50-8c56-4f26-935e-56ccfa496bb5"
            },
            {
              "type": "public__people-article",
              "id": "777cc565-c66b-4942-ab44-8fc5f194b804,fdf715dd-8772-498c-8196-6f4ccb64edef"
            }
          ]
        }
      }
    },
    {
      "type": "public__peoples",
      "id": "961e543a-4b22-4d48-a8e5-c1eafada950f",
      "attributes": {
        "age": null,
        "first-name": "AAAAAAAA",
        "gender": null,
        "last-name": "BBBBBBBBB",
        "twitter": null
      }
    }
  ],
  "included": [
    {
      "type": "public__people-article",
      "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f,2dbf5d1a-b029-4456-af6b-339c75b1089c"
    },
    {
      "type": "public__people-article",
      "id": "1649b1e9-8a5f-4f52-b331-c07ce3bccc6f,fdf715dd-8772-498c-8196-6f4ccb64edef"
    },
    {
      "type": "public__people-article",
      "id": "777cc565-c66b-4942-ab44-8fc5f194b804,46c4fe50-8c56-4f26-935e-56ccfa496bb5"
    },
    {
      "type": "public__people-article",
      "id": "777cc565-c66b-4942-ab44-8fc5f194b804,fdf715dd-8772-498c-8196-6f4ccb64edef"
    }
  ]
}
